--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </style>
 <body>
     <h2>Berak merupakan perkara normal</h2>
-    <img src="https://github.com/iqmrr/linktree/blob/main/arif.jpg?raw=true" alt="">
+    <img src="https://github.com/iqmrr/linktree/blob/main/arif.jpg?raw=true" height= "150" alt="">
     <br>
 
     <img src="" />
